RESOLVED FIXED174395
REGRESSION(r219332): [GTK] 9 new failures on fast/forms spinbutton related tests
https://bugs.webkit.org/show_bug.cgi?id=174395
Summary REGRESSION(r219332): [GTK] 9 new failures on fast/forms spinbutton related tests
Carlos Alberto Lopez Perez
Reported 2017-07-11 15:21:02 PDT
I missed this failures on my last iteration of the patch that landed in r219332 <https://trac.webkit.org/r219332> Regressions: Unexpected text-only failures (9) fast/events/touch/touch-before-pressing-spin-button.html [ Failure ] fast/forms/input-number-click.html [ Failure ] fast/forms/input-step-as-double.html [ Failure ] fast/forms/number/number-large-padding.html [ Failure ] fast/forms/number/number-spinbutton-capturing.html [ Failure ] fast/forms/number/number-spinbutton-change-and-input-events.html [ Failure ] fast/forms/number/number-spinbutton-gets-disabled-or-readonly.html [ Failure ] fast/forms/number/number-spinbutton-in-multi-column.html [ Failure ] fast/forms/number/number-spinbutton-state.html [ Failure ]
Attachments
Patch (82.58 KB, patch)
2017-07-12 08:40 PDT, Carlos Alberto Lopez Perez
cgarcia: review+
Carlos Alberto Lopez Perez
Comment 1 2017-07-11 15:33:20 PDT
Carlos Alberto Lopez Perez
Comment 2 2017-07-12 08:40:45 PDT
Carlos Garcia Campos
Comment 3 2017-07-12 22:55:17 PDT
Comment on attachment 315243 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=315243&action=review > Source/WebCore/ChangeLog:15 > + Before r219332 the height of the spin button was calculated as > + the maximum value between the arrow width (33 pixels) and the > + arrow height (16 pixels). > + r219332 caused the height to be calculated as the arrow height, > + which was incorrect as the arrow should be first expanded > + vertically to fit the preferred size of the spinbutton widget. There are no arrows in spin buttons, I guess you mean just the spin button itself here.
Carlos Alberto Lopez Perez
Comment 4 2017-07-13 02:26:28 PDT
(In reply to Carlos Garcia Campos from comment #3) > Comment on attachment 315243 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=315243&action=review > > > Source/WebCore/ChangeLog:15 > > + Before r219332 the height of the spin button was calculated as > > + the maximum value between the arrow width (33 pixels) and the > > + arrow height (16 pixels). > > + r219332 caused the height to be calculated as the arrow height, > > + which was incorrect as the arrow should be first expanded > > + vertically to fit the preferred size of the spinbutton widget. > > There are no arrows in spin buttons, I guess you mean just the spin button > itself here. Yes, with arrows I meant each one of the individual buttons (the [+] and the [-]).
Carlos Alberto Lopez Perez
Comment 5 2017-07-13 02:39:00 PDT
Note You need to log in before you can comment on or make changes to this bug.